--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>San Joaquin Valley Town Hall</title>
 	<link rel="shortcut icon" href="images/favicon.ico">
 	<link rel="stylesheet" href="styles/c7_main.css">
+	<link rel="stylesheet" href="styles/slicknav.css">
 </head>
 
 <body>
@@ -14,6 +15,23 @@
 		<h2>San Joaquin Valley Town Hall</h2>
 		<h3>Celebrating our <span class="shadow">75<sup>th</sup></span> Year</h3>
 	</header>
+	<nav id="nav_menu">
+		<ul>
+			<li class="current"><a href="index.html">Home</a></li>
+			<li><a href="speakers.html">Speakers</a></li>
+			<li><a href="luncheons.html">Luncheons</a></li>
+			<li><a href="tickets.html">Tickets</a></li>
+			<li>
+				<a href="#">About Us</a>
+				<ul class="submenu">
+					<li><a href="#">Our History</a></li>
+					<li><a href="#">Board of Directors</a></li>
+					<li><a href="#">Past Speakers</a></li>
+					<li><a href="#">Contact Information</a></li>
+				</ul>
+			</li>
+		</ul>
+	</nav>
 	<main>
 		<section>
 			<h2>Our Mission</h2>
@@ -35,6 +53,7 @@
 				has focused on the ecology and evolution of late Cretaceous dinosaurs and he has conducted 
 				fieldwork in a number of countries in Africa.</p>
 				<p><a href="speakers/c6_sampson.html">Read more.</a>&nbsp;<b>Or meet us there!</b></p>
+				<p><a href="media/sampson.mp4" target="_blank">Or play video.</a></p>
 			</article>
 			
 			<h2>Our Ticket Packages</h2>
@@ -58,7 +77,7 @@
 		</aside>
 	</main>
 	<footer>
-		<p>&copy; 2022, San Joaquin Valley Town Hall, Fresno, CA 93755</p>
+		<p>&copy; Jayden McRae, Novmeber 12, 2024</p>
 	</footer>
 </body>
 </html>
