--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<p>San Joaquin Valley Town Hall is a non-profit organization that is run by an 
 			   all-volunteer board of directors. Our mission is to bring nationally and 
 			   internationally renowned, thought-provoking speakers who inform, educate, 
-			   and entertain our audience! As one or our members told us:</p>
+			   and entertain our audience! As one of our members told us:</p>
 			<blockquote>&ldquo;Each year I give a ticket package to each of our family members. 
 			I think of it as the gift of knowledge...and that is priceless.&rdquo;</blockquote>
 			<h1>Speaker of the Month</h1>
@@ -77,7 +77,7 @@
 		</aside>
 	</main>
 	<footer>
-		<p>&copy; Jayden McRae, Novmeber 12, 2024</p>
+		<p>&copy; 2022, San Joaquin Valley Town Hall, Fresno, CA 93755</p>
 	</footer>
 </body>
 </html>
