--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 		</aside>
 	</main>
 	<footer>
-		<p>&copy; 2022, San Joaquin Valley Town Hall, Fresno, CA 93755</p>
+		<p>&copy; Jayden McRae, November 12, 2024</p>
 	</footer>
 </body>
 </html>
